// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavButton snapshots with "to" prop 1`] = `
<a
  className="NavButton"
  href="/somewhere"
  onClick={[Function]}
  style={undefined}
>
  <div>
    <div
      className="icon"
    >
      <i
        className="fa fa-"
      />
    </div>
    <div
      className="label"
    >
      going somewhere
    </div>
  </div>
</a>
`;

exports[`NavButton snapshots without "to" prop 1`] = `
<button
  className="NavButton"
  onClick={[Function]}
  type="button"
>
  <div>
    <div
      className="icon"
    >
      <i
        className="fa fa-"
      />
    </div>
    <div
      className="label"
    >
      
    </div>
  </div>
</button>
`;
